add a 15+ option, and rename 9+ to 9-14